force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Miscellaneous_Justification__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Justification__c</fullName>
    <description>Miscellaneous Justification</description>
    <inlineHelpText>Miscellaneous Justification</inlineHelpText>
    <label>Miscellaneous Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>