force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Miscellaneous_Total__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Total__c</fullName>
    <formula>BLANKVALUE(Miscellaneous_Year1__c, 0) +
BLANKVALUE(Miscellaneous_Year2__c, 0) +
BLANKVALUE(Miscellaneous_Year3__c, 0) +
BLANKVALUE(Miscellaneous_Year4__c, 0) +
BLANKVALUE(Miscellaneous_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Miscellaneous Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>