force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Miscellaneous_Year3__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Year3__c</fullName>
    <label>Miscellaneous Year3</label>
    <summarizedField>Miscellaneous__c.Year_3_Cost__c</summarizedField>
    <summaryForeignKey>Miscellaneous__c.Applicant_Proposal_Association__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>