force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Name_of_the_Ongoing_funding_agency__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Ongoing_funding_agency__c</fullName>
    <description>Name of the funding agency and Scheme</description>
    <inlineHelpText>Name of the funding agency and Scheme</inlineHelpText>
    <label>Name of the Ongoing funding agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>