force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Ongoing_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Project_Title__c</fullName>
    <description>Ongoing Project Title</description>
    <inlineHelpText>Ongoing Project Title</inlineHelpText>
    <label>Ongoing Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>