force-app/main/default/objects/Applicant_Proposal_Association__c/fields/ORCID_ID__c.field-meta.xml
<CustomField>
    <fullName>ORCID_ID__c</fullName>
    <label>ORCID ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>