force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Other_Ongoing_Applications__c.field-meta.xml
<CustomField>
    <fullName>Other_Ongoing_Applications__c</fullName>
    <description>Do you have any grant or fellowship applications in progress with any other (domestic or international) funding agency?</description>
    <inlineHelpText>Do you have any grant or fellowship applications in progress with any other (domestic or international) funding agency?</inlineHelpText>
    <label>Other Ongoing Applications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>