force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Other_Ongoing_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Other_Ongoing_Scheme__c</fullName>
    <description>Other Ongoing Scheme Name</description>
    <inlineHelpText>Other Ongoing Scheme Name</inlineHelpText>
    <label>Other Ongoing Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>