force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Personal_Salary_Year3__c.field-meta.xml
<CustomField>
    <fullName>Personal_Salary_Year3__c</fullName>
    <label>Personal Salary Year3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>