force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Personal_Support_Justification__c.field-meta.xml
<CustomField>
    <fullName>Personal_Support_Justification__c</fullName>
    <label>Personal Support Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>