force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Personal_Support_Tab_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Personal_Support_Tab_Cost_Total__c</fullName>
    <formula>BLANKVALUE(Total_IA_Salary__c, 0) + BLANKVALUE(Total_Personal_Salary__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Support Tab Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>