force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Personal_Support_Tab_Cost_Year2__c.field-meta.xml
<CustomField>
    <fullName>Personal_Support_Tab_Cost_Year2__c</fullName>
    <formula>BLANKVALUE(IA_Salary_Year2__c, 0) + BLANKVALUE(Personal_Salary_Year2__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Support Tab Cost Year2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>