force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Previous_Application_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Previous_Application_Project_Title__c</fullName>
    <description>Project Title - Previous</description>
    <inlineHelpText>Project Title - Previous</inlineHelpText>
    <label>Previous Application Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>