force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Previous_Application_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Application_Reference_Number__c</fullName>
    <description>Reference Number</description>
    <inlineHelpText>Reference Number</inlineHelpText>
    <label>Previous Application Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>