force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Previous_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Previous_Scheme__c</fullName>
    <description>Scheme</description>
    <inlineHelpText>Scheme</inlineHelpText>
    <label>Previous Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>