force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Applicant Proposal Associations</relationshipLabel>
    <relationshipName>Applicant_Proposal_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>