force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Purchase_cost_Year3__c.field-meta.xml
<CustomField>
    <fullName>Purchase_cost_Year3__c</fullName>
    <formula>Proposal__r.Purchase_cost_Year3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase cost Year3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>