force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Salary_support_during_WOHI__c.field-meta.xml
<CustomField>
    <fullName>Salary_support_during_WOHI__c</fullName>
    <description>Do you need salary support during WOHI (only if the Host Instituition&apos;s policy does not support salary in the extended leave period)?</description>
    <inlineHelpText>Do you need salary support during WOHI (only if the Host Instituition&apos;s policy does not support salary in the extended leave period)?</inlineHelpText>
    <label>Salary support during WOHI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>