force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Salary_Support_from_Host__c.field-meta.xml
<CustomField>
    <fullName>Salary_Support_from_Host__c</fullName>
    <description>In case of an award would you receive any salary support from the Host Instituition?</description>
    <inlineHelpText>In case of an award would you receive any salary support from the Host Instituition?</inlineHelpText>
    <label>Salary Support from Host</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>