force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Scientific_career_to_date__c.field-meta.xml
<CustomField>
    <fullName>Scientific_career_to_date__c</fullName>
    <description>Personal statement describing your scientific trajectory, highlighting your expertise summarizing your achievements.</description>
    <inlineHelpText>Personal statement describing your scientific trajectory, highlighting your expertise summarizing your achievements.</inlineHelpText>
    <label>Scientific career to date</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>