force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Scientific_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Scientific_Meetings__c</fullName>
    <description>Provide a categorized numbered list (last 2 years). Include only invited talks and presentations.</description>
    <inlineHelpText>Provide a categorized numbered list (last 2 years). Include only invited talks and presentations.</inlineHelpText>
    <label>Scientific Meetings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>