force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Staff_and_Salary_Justification__c.field-meta.xml
<CustomField>
    <fullName>Staff_and_Salary_Justification__c</fullName>
    <description>Staff and their Salary Justification</description>
    <inlineHelpText>Staff and their Salary Justification</inlineHelpText>
    <label>Staff and Salary Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>