force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Staff_Total__c.field-meta.xml
<CustomField>
    <fullName>Staff_Total__c</fullName>
    <formula>BLANKVALUE(Staff_Year1__c, 0) +
BLANKVALUE(Staff_Year2__c, 0) +
BLANKVALUE(Staff_Year3__c, 0) +
BLANKVALUE(Staff_Year4__c, 0) +
BLANKVALUE(Staff_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>