force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Staff_Year2__c.field-meta.xml
<CustomField>
    <fullName>Staff_Year2__c</fullName>
    <label>Staff Year2</label>
    <summarizedField>Staff_Budget__c.Year_2__c</summarizedField>
    <summaryFilterItems>
        <field>Staff_Budget__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Staff</value>
    </summaryFilterItems>
    <summaryForeignKey>Staff_Budget__c.Applicant_Proposal_Association__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>