force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Status_at_the_Host_Institution__c.field-meta.xml
<CustomField>
    <fullName>Status_at_the_Host_Institution__c</fullName>
    <description>Select one of the following options with reference to your status at the proposed Host Institution:  
Already hold a faculty position at the Host institution. 
Do not have a faculty position at the Host Institution.</description>
    <label>Status at the Host Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already hold a faculty position at the Host institution</fullName>
            </value>
            <value>
                <fullName>Do not have a faculty position at the Host Institution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>