force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Total_FA_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_FA_cost__c</fullName>
    <formula>Yearly_Scheme__r.Total_FA_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total FA cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>