force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Total_Host_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Host_Salary__c</fullName>
    <label>Total Host Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>