force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Total_IA_Salary_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_IA_Salary_Formula__c</fullName>
    <formula>BLANKVALUE(IA_Salary_Year1__c, 0) +
BLANKVALUE(IA_Salary_Year2__c, 0) +
BLANKVALUE(IA_Salary_Year3__c, 0) +
BLANKVALUE(IA_Salary_Year4__c, 0) +
BLANKVALUE(IA_Salary_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total IA Salary Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>