force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Travel_to_Meetings_Cost__c.field-meta.xml
<CustomField>
    <fullName>Travel_to_Meetings_Cost__c</fullName>
    <label>Travel to Meetings Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>