force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Travel_to_Meetings_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Travel_to_Meetings_Cost_Total__c</fullName>
    <formula>BLANKVALUE(Travel_to_Meetings_Cost_Year1__c, 0) +
BLANKVALUE(Travel_to_Meetings_Cost_Year_2__c, 0) +
BLANKVALUE(Travel_to_Meetings_Cost_Year_3__c, 0) +
BLANKVALUE(Travel_to_Meetings_Cost_Year_4__c, 0) +
BLANKVALUE(Travel_to_Meetings_Cost_Year_5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel to Meetings Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>