force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Travel_to_Meetings_Cost_Year1__c.field-meta.xml
<CustomField>
    <fullName>Travel_to_Meetings_Cost_Year1__c</fullName>
    <formula>IF(ISPICKVAL(Travel_to_Meetings_Year__c, &quot;1&quot;), Travel_to_Meetings_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel to Meetings Cost Year1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>