force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Travel_to_Meetings_Cost_Year_4__c.field-meta.xml
<CustomField>
    <fullName>Travel_to_Meetings_Cost_Year_4__c</fullName>
    <formula>IF(ISPICKVAL(Travel_to_Meetings_Year__c, &quot;4&quot;), Travel_to_Meetings_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel to Meetings Cost Year 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>