force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Travel_to_Meetings_Justification__c.field-meta.xml
<CustomField>
    <fullName>Travel_to_Meetings_Justification__c</fullName>
    <label>Travel to Meetings Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>