force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Travel_to_Meetings_Year__c.field-meta.xml
<CustomField>
    <fullName>Travel_to_Meetings_Year__c</fullName>
    <label>Travel to Meetings Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>