force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Type_of_funding__c.field-meta.xml
<CustomField>
    <fullName>Type_of_funding__c</fullName>
    <description>Type of funding</description>
    <inlineHelpText>Type of funding</inlineHelpText>
    <label>Type of funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fellowship</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>