force-app/main/default/objects/Applicant_Proposal_Association__c/fields/What_guidance_do_you_expect_to_receive__c.field-meta.xml
<CustomField>
    <fullName>What_guidance_do_you_expect_to_receive__c</fullName>
    <label>What guidance do you expect to receive</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>