force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Which_Repositories__c.field-meta.xml
<CustomField>
    <fullName>Which_Repositories__c</fullName>
    <description>Which repositories will you use (e.g., Indian Biological Data Centre [IBDC], international genomics/proteomics databases such as NCBI, EMBL-EBI, PRIDE, GEO).</description>
    <inlineHelpText>Which repositories will you use (e.g., Indian Biological Data Centre [IBDC], international genomics/proteomics databases such as NCBI, EMBL-EBI, PRIDE, GEO).</inlineHelpText>
    <label>Which Repositories</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>