force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Why_Host_Laboratory_is_suitable_for_work__c.field-meta.xml
<CustomField>
    <fullName>Why_Host_Laboratory_is_suitable_for_work__c</fullName>
    <description>Highlight their unique alignment of expertise, proven record of mentoring, and complementarity of skill sets.</description>
    <inlineHelpText>Highlight their unique alignment of expertise, proven record of mentoring, and complementarity of skill sets.</inlineHelpText>
    <label>Why Host Laboratory is suitable for work</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>