force-app/main/default/objects/Applicant_Proposal_Association__c/fields/WOHI_Allowance_Total__c.field-meta.xml
<CustomField>
    <fullName>WOHI_Allowance_Total__c</fullName>
    <formula>BLANKVALUE(WOHI_Allowance_Year1__c, 0) +
BLANKVALUE(WOHI_Allowance_Year2__c, 0) +
BLANKVALUE(WOHI_Allowance_Year3__c, 0) +
BLANKVALUE(WOHI_Allowance_Year4__c, 0) +
BLANKVALUE(WOHI_Allowance_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WOHI Allowance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>