force-app/main/default/objects/Applicant_Proposal_Association__c/fields/WOHI_Allowance_Year1__c.field-meta.xml
<CustomField>
    <fullName>WOHI_Allowance_Year1__c</fullName>
    <label>WOHI Allowance Year1</label>
    <summarizedField>WOHI_Allowance__c.Year1_Cost__c</summarizedField>
    <summaryForeignKey>WOHI_Allowance__c.Applicant_Proposal_Association__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>