force-app/main/default/objects/Applicant_Proposal_Association__c/fields/WOHI_Allowance_Year2__c.field-meta.xml
<CustomField>
    <fullName>WOHI_Allowance_Year2__c</fullName>
    <label>WOHI Allowance Year2</label>
    <summarizedField>WOHI_Allowance__c.Year2_Cost__c</summarizedField>
    <summaryForeignKey>WOHI_Allowance__c.Applicant_Proposal_Association__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>