force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Yearly_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Scheme</label>
    <referenceTo>Yearly_Schemes__c</referenceTo>
    <relationshipLabel>Applicant Proposal Associations</relationshipLabel>
    <relationshipName>Applicant_Proposal_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>