force-app/main/default/objects/Applicant_Proposal_Association__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proposal__c</columns>
    <columns>Contact__c</columns>
    <columns>Yearly_Scheme__c</columns>
    <columns>Applicant_Status__c</columns>
    <columns>Is_Coordinator__c</columns>
    <columns>Declaration_Sign_Date_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>